fixed menu items collapse

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ font-size: 2em;
 
 	/*Replay Button*/
 #replay{
-	top: 35%;
+	bottom: 100px;
 	width: 100%;
 	height: 50px;
 	position:fixed;
@@ -107,7 +107,7 @@ a #replay{
 	background-color: #1abc9c;
 }
 #quit{
-	top:30%;
+	bottom: 50px;
 	width: 100%;
 	height: 50px;
 	position:fixed;
